--- a/quski-oro-rest/src/main/resources/reportes/AutorizacionReporteCredito.jrxml
+++ b/quski-oro-rest/src/main/resources/reportes/AutorizacionReporteCredito.jrxml
@@ -31,10 +31,10 @@
 				<textElement textAlignment="Justified">
 					<font fontName="Arial"/>
 				</textElement>
-				<textFieldExpression><![CDATA["Yo" + $P{BEAN_DS}.getNombreCliente()   + " con CI"+ $P{BEAN_DS}.getCedulaCliente() + " por medio de la presente autorizo de manera voluntaria, previa, explícita, informada e inequívoca a Quski C.A., o a quien en el futuro actué en calidad de acreedor, para que a través de sus funcionarios debidamente facultados revisen la información sobre mi comportamiento crediticio, manejo de cuentas, tarjetas de crédito, inversiones y en general sobre el cumplimiento de mis obligaciones, información de mis activos y pasivos, en todas las entidades de información crediticia que se estimen convenientes, debidamente constituidas y autorizadas por autoridad competente."]]></textFieldExpression>
+				<textFieldExpression><![CDATA["Yo " + $P{BEAN_DS}.getNombreCliente()   + " con CI "+ $P{BEAN_DS}.getCedulaCliente() + " por medio de la presente autorizo de manera voluntaria, previa, explícita, informada e inequívoca a Quski C.A., o a quien en el futuro actué en calidad de acreedor, para que a través de sus funcionarios debidamente facultados revisen la información sobre mi comportamiento crediticio, manejo de cuentas, tarjetas de crédito, inversiones y en general sobre el cumplimiento de mis obligaciones, información de mis activos y pasivos, en todas las entidades de información crediticia que se estimen convenientes, debidamente constituidas y autorizadas por autoridad competente."]]></textFieldExpression>
 			</textField>
 			<line>
-				<reportElement positionType="Float" x="1" y="422" width="180" height="1" uuid="238eb198-2796-4bab-8fb2-fa3aa04ca3eb"/>
+				<reportElement positionType="Float" x="131" y="425" width="230" height="1" uuid="238eb198-2796-4bab-8fb2-fa3aa04ca3eb"/>
 			</line>
 			<textField>
 				<reportElement x="0" y="30" width="100" height="20" uuid="47b7aea6-7535-4668-a4fe-ca16bbda7d75"/>
@@ -61,16 +61,9 @@
 				</textElement>
 				<text><![CDATA[Presente]]></text>
 			</staticText>
-			<staticText>
-				<reportElement x="0" y="432" width="170" height="20" uuid="0b83f789-e57f-4ff3-a0e1-c682abe73c98"/>
-				<textElement>
-					<font fontName="Arial" isBold="true" isUnderline="true"/>
-				</textElement>
-				<text><![CDATA[Firma]]></text>
-			</staticText>
 			<textField isStretchWithOverflow="true">
 				<reportElement positionType="Float" x="0" y="240" width="483" height="90" uuid="34f70ce0-6b4f-444d-89f3-4fab6f5fb2d0"/>
-				<textElement textAlignment="Justified">
+				<textElement textAlignment="Justified" markup="html">
 					<font fontName="Arial"/>
 				</textElement>
 				<textFieldExpression><![CDATA["Autorizo expresamente a Quski C.A. en calidad de responsable de tratamiento de datos personales, para que realice el tratamiento de mis datos personales y datos de categoría especial, para que los use, conserve y los transfiera a terceros determinados, para cumplir con las finalidades que fundamentaron su recopilación. Quski C.A. me ha garantizado que la información será tratada de manera lícita, transparente, oportuna y limitada a lo necesario en relación con los fines pertinentes.  <br><br><br>"+
